Test Repaired. Now works with Pages